# libchamplain

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  MAINTAINTERS  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  champlain-gtk-uninstalled.pc.in  champlain-gtk.pc.in  champlain-memphis-uninstalled.pc.in  champlain-memphis.pc.in  champlain-uninstalled.pc.in  champlain.pc  champlain.pc.in  configure  configure.ac  libchamplain.doap  libtool  make_dist.sh  meson.build  meson_options.txt
bindings/managed/champlain-gtk/: .gitignore  Makefile.am  champlain-gtk-api.raw  champlain-gtk-sharp.pc.in  champlain-gtk-sources.xml
bindings/managed/samples/: .gitignore  Makefile.am  gtk-test.cs
bindings/perl/Champlain/: .gitignore  .xs-coverage.ignore  Changes  MANIFEST  MANIFEST.SKIP  Makefile.PL  Makefile.am  README  champlain-perl.h  maps  maps-gtk
bindings/perl/Champlain/examples/: animated-marker.pl  capitals.pl  flickr.pl  gtk2.pl  image.pl  launcher.pl  polygons.pl
bindings/perl/Champlain/lib/: Champlain.pm
bindings/perl/Champlain/t/: Champlain.t  ChamplainBaseMarker.t  ChamplainLayer.t  ChamplainMapSource.t  (+12 more)
bindings/python/champlain/: Makefile.am  pychamplain-base.defs  pychamplain-boxed-types.defs  pychamplain-constructors.defs  pychamplain.defs  pychamplain.h  pychamplain.override  pychamplainmemphis-base.defs  pychamplainmemphis-boxed-types.defs  pychamplainmemphis-constructors.defs  pychamplainmemphis.defs  pychamplainmemphis.h  pychamplainmemphis.override  pychamplainmemphismodule.c  pychamplainmodule.c
bindings/python/champlain-gtk/: Makefile.am  pychamplaingtk-base.defs  pychamplaingtk.defs  pychamplaingtk.override  pychamplaingtkmodule.c
bindings/vala/champlain-gtk/: Makefile.am  champlain-gtk-0.10.deps  champlain-gtk-0.10.vapi  champlain-gtk-0.4.deps  champlain-gtk-0.4.vapi  champlain-gtk-0.6.vapi  champlain-gtk-0.7.deps  champlain-gtk-0.7.vapi  champlain-gtk-0.8.deps  champlain-gtk-0.8.vapi  create.sh  create.sh.in
bindings/vala/champlain-memphis/: Makefile.am  champlain-memphis-0.10.deps  champlain-memphis-0.10.vapi  champlain-memphis-0.6.deps  champlain-memphis-0.7.deps  champlain-memphis-0.7.vapi  champlain-memphis-0.8.deps  champlain-memphis-0.8.vapi  create.sh  create.sh.in
bindings/vala/demos/: .gitignore  Makefile.am  markers.vala
champlain/: Makefile.am  champlain-0.10.vapi  champlain-0.12.vapi  champlain-0.14.vapi  champlain-adjustment.c  champlain-adjustment.h  champlain-base-marker.c  champlain-base-marker.h  champlain-bounding-box.c  champlain-bounding-box.h  champlain-cache.c  champlain-cache.h  champlain-coordinate.c  champlain-coordinate.h  champlain-custom-marker.c  champlain-custom-marker.h  champlain-debug.c  champlain-debug.h  champlain-defines.h  champlain-enum-types.c.in  champlain-enum-types.h.in  champlain-error-tile-renderer.c  champlain-error-tile-renderer.h  champlain-error-tile-source.c  champlain-error-tile-source.h  champlain-features.h.in  champlain-file-cache.c  champlain-file-cache.h  champlain-file-tile-source.c  champlain-file-tile-source.h  champlain-finger-scroll.c  champlain-finger-scroll.h  champlain-group.c  champlain-group.h  champlain-image-renderer.c  champlain-image-renderer.h  champlain-kinetic-scroll-view.c  champlain-kinetic-scroll-view.h  champlain-label.c  champlain-label.h  (+96 more)
champlain-gtk/: AssemblyInfo.cs.in  Makefile.am  champlain-gtk-0.10.vapi  champlain-gtk-0.12.vapi  champlain-gtk-enum-types.c.in  champlain-gtk-enum-types.h.in  champlain-gtk-sources.xml  champlain-gtk.h  champlain-view-embed.c  champlain-view-embed.h  champlainviewembed.c  champlainviewembed.h  gtk-champlain-embed.c  gtk-champlain-embed.h  launcher.c  meson.build
champlain/sources/: debugmap.c  debugmap.h  google_map.c  google_map.h  google_sat.c  google_sat.h  google_terrain.c  google_terrain.h  googlemap.c  googlemap.h  googlesat.c  googlesat.h  googleterrain.c  googleterrain.h  mff_relief.c  mff_relief.h  mffrelief.c  mffrelief.h  oam.c  oam.h  openstreetmap.c  openstreetmap.h  osm_mapnik.c  osm_mapnik.h  osmmapnik.c  osmmapnik.h
demos/: Makefile.am  animated-marker.c  create-destroy-test.c  image.c  keyboard-mapping.py  las_palmas.osm  launcher  launcher-gtk.c  launcher-gtk.py  launcher-vala.vala  launcher.c  launcher.js  launcher.vala  lines.c  local-rendering.c  mapbox.py  markers-vala.vala  markers.c  markers.h  markers.py  meson.build  minimal-gtk.c  minimal.c  minimal.py  polygons.c  polygons.py  url-image.c  url-marker.c
demos/icons/: Makefile.am
demos/memphis/: Makefile.am
docs/reference/: Makefile.am  champlain-docs.xml  champlain-sections.txt  libchamplain-docs.sgml  libchamplain-gtk-docs.sgml  libchamplain-gtk-sections.txt  libchamplain-sections.txt  libchamplain.types  meson.build
docs/reference-gtk/: Makefile.am  champlain-gtk-docs.xml  champlain-gtk-sections.txt  libchamplain-gtk-docs.sgml  libchamplain-gtk-sections.txt  libchamplain-gtk.types  meson.build
docs/reference-gtk/tmpl/: champlain-gtk-marshal.sgml  champlain-gtk-marshal.sgml.bak  champlainviewembed.sgml  champlainviewembed.sgml.bak
docs/reference/tmpl/: champlainmarker.sgml  champlainview.sgml
mx/: Makefile.am  mx-adjustment.h  mx-bin.c  mx-bin.h  mx-draggable.h  mx-enum-types.c.in  mx-enum-types.h.in  mx-kinetic-scroll-view.c  mx-kinetic-scroll-view.h  mx-marshal.list  mx-private.h  mx-scrollable.h  mx-types.h  mx-viewport.c  mx-viewport.h
src/: Makefile.am  Makefile.in  champlain.h  champlain_defines.h  champlain_map.c  champlain_map.h  champlain_map_tile.c  champlain_map_tile.h  champlain_map_zoom_level.c  champlain_map_zoom_level.h  champlain_private.h  champlain_widget.c  champlain_widget.cpp  champlain_widget.h  champlainview.c  champlainview.h  launcher.c  map.c  map.h  tile.c  tile.h  zoomlevel.c
src/map_source/: debugmap.c  debugmap.h  openstreetmap.c  openstreetmap.h
src/sources/: debugmap.c  openstreetmap.c
tidy/: Makefile.am  tidy-adjustment.c  tidy-adjustment.h  tidy-finger-scroll.c  tidy-finger-scroll.h  tidy-scroll-view.c  tidy-scroll-view.h  tidy-scrollable.h  tidy-viewport.c  tidy-viewport.h
(+128 files in other folders)
