SUBDIRS = tidy champlain

ACLOCAL_AMFLAGS = -I m4

pcfiles = champlain-@CHAMPLAIN_API_VERSION@.pc
other_pcfiles = champlain-@CHAMPLAIN_API_VERSION@-uninstalled.pc
champlain-@CHAMPLAIN_API_VERSION@.pc: champlain.pc
	@cp -f $< $@
champlain-@CHAMPLAIN_API_VERSION@-uninstalled.pc: champlain-uninstalled.pc
	@cp -f $< $@

if ENABLE_GTK
SUBDIRS += champlain-gtk
pcfiles += champlain-gtk-@CHAMPLAIN_API_VERSION@.pc
champlain-gtk-@CHAMPLAIN_API_VERSION@.pc: champlain-gtk.pc
	@cp -f $< $@
other_pcfiles += champlain-gtk-@CHAMPLAIN_API_VERSION@-uninstalled.pc
champlain-gtk-@CHAMPLAIN_API_VERSION@-uninstalled.pc: champlain-gtk-uninstalled.pc
	@cp -f $< $@
endif

if ENABLE_MEMPHIS
pcfiles += champlain-memphis-@CHAMPLAIN_API_VERSION@.pc
champlain-memphis-@CHAMPLAIN_API_VERSION@.pc: champlain-memphis.pc
	@cp -f $< $@
other_pcfiles += champlain-memphis-@CHAMPLAIN_API_VERSION@-uninstalled.pc
champlain-memphis-@CHAMPLAIN_API_VERSION@-uninstalled.pc: champlain-memphis-uninstalled.pc
	@cp -f $< $@
endif

pkgconfig_DATA = $(pcfiles)
pkgconfigdir = $(libdir)/pkgconfig

DISTCHECK_CONFIGURE_FLAGS=--enable-gtk-doc --enable-gtk --enable-python --enable-vala-demos --enable-introspection

EXTRA_DIST = \
	champlain-gtk.pc.in \
	champlain-gtk-uninstalled.pc.in \
	champlain-memphis.pc.in \
	champlain-memphis-uninstalled.pc.in \
	champlain.pc.in \
	champlain-uninstalled.pc.in

CLEANFILES = $(pcfiles) $(other_pcfiles)

all: $(other_pcfiles)

# Have the demos build at the end as they depend on optional parts
SUBDIRS += docs demos bindings

dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/missing --run git log --pretty=medium ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi

